# ros-type-introspection-prototype

./: .gitignore  .gitmodules  README.md
prototype_ws/src/: TODOS  dynamic_subscription_ws.repos  ros2.repos
prototype_ws/src/dynamic_typesupport/evolving_protobuf_c/: CMakeLists.txt  package.xml
prototype_ws/src/dynamic_typesupport/evolving_protobuf_c/include/evolving_protobuf_c/: protogen.h
prototype_ws/src/dynamic_typesupport/evolving_protobuf_c/src/: protogen.c
prototype_ws/src/dynamic_typesupport/rosidl_dynamic_typesupport/: README.md  package.xml  package.xml~main
prototype_ws/src/dynamic_typesupport/rosidl_dynamic_typesupport_fastrtps/: CMakeLists.txt  package.xml
prototype_ws/src/dynamic_typesupport/rosidl_dynamic_typesupport_fastrtps/include/rosidl_dynamic_typesupport_fastrtps/: identifier.h  serialization_support.h
prototype_ws/src/dynamic_typesupport/rosidl_dynamic_typesupport_fastrtps/src/: identifier.cpp  serialization_support.cpp
prototype_ws/src/dynamic_typesupport/rosidl_dynamic_typesupport_fastrtps/src/detail/: dynamic_data.cpp  dynamic_data.h  dynamic_type.cpp  dynamic_type.h  serialization_support_impl_handle.cpp  serialization_support_impl_handle.h  utils.hpp
prototype_ws/src/evolving_fastdds_c/: CMakeLists.txt  package.xml
prototype_ws/src/evolving_fastdds_c/src/: hello.cpp  type_support.cpp
prototype_ws/src/evolving_fastrtps_c/: CMakeLists.txt  package.xml
prototype_ws/src/evolving_fastrtps_c/include/evolving_fastrtps_c/: type_support.h
prototype_ws/src/evolving_fastrtps_c/src/: type_support.cpp
prototype_ws/src/evolving_protobuf_c/: CMakeLists.txt  package.xml
prototype_ws/src/evolving_protobuf_c/include/evolving_protobuf_c/: protogen.h
prototype_ws/src/evolving_protobuf_c/src/: protogen.c
prototype_ws/src/evolving_serialization_examples/: CMakeLists.txt  package.xml
prototype_ws/src/evolving_serialization_examples/msg/: example_pub_msg.yaml  example_pub_seq_of_nested_msg_msg.yaml  nested.yaml
prototype_ws/src/evolving_serialization_examples/src/: flat_msg_yaml_parsing.c  nested_msg_yaml_parsing.c
prototype_ws/src/evolving_serialization_examples/src/fastdds_evolving_sub/: BasicPublisher.cpp  EvolvingSubscription.cpp  README.md  example_msg.yaml
prototype_ws/src/evolving_serialization_examples/src/fastrtps_evolving_pubsub/: CMakeLists.txt  EvolvingPublisher.cpp  EvolvingPublisher.h  EvolvingSubscription.cpp  EvolvingSubscription.h  README.md
prototype_ws/src/evolving_serialization_examples/src/fastrtps_evolving_sub/: BasicPublisher.cpp  BasicPublisher.h  EvolvingSubscription.cpp
prototype_ws/src/evolving_serialization_examples/src/fastrtps_evolving_walkthrough/: CMakeLists.txt  walkthrough.cpp
prototype_ws/src/evolving_serialization_examples/src/protobuf_evolving_pubsub/: CMakeLists.txt  protogen_demo.cpp
prototype_ws/src/evolving_serialization_examples/src/protobuf_evolving_ser/: CMakeLists.txt  protobuf_evolving_ser.cpp  protogen_demo.cpp
prototype_ws/src/evolving_serialization_examples/src/yaml_parsing/: CMakeLists.txt  flat_msg_yaml_parsing.c  nested_msg_yaml_parsing.c
prototype_ws/src/evolving_serialization_lib/: CMakeLists.txt  README.md  glib-extras.cmake  package.xml
prototype_ws/src/evolving_serialization_lib/include/evolving_serialization_lib/: description.h  evolving_type_support.h  tree_traverse.h  types.h  yaml_parser.h
prototype_ws/src/evolving_serialization_lib/msg/: flat.yaml
prototype_ws/src/evolving_serialization_lib/src/: description.c  evolving_type_support.c  flat_msg_yaml_parsing.c  nested_msg_yaml_parsing.c  tree_traverse.c  yaml_parser.c
prototype_ws/src/evolving_serialization_lib/src/impl/: tree_traverse.c  tree_traverse.h  tree_traverse_impl.c  tree_traverse_impl.h  yaml_parser.c  yaml_parser.h
prototype_ws/src/examples/dynamic_typesupport_examples/: CMakeLists.txt  package.xml
prototype_ws/src/examples/dynamic_typesupport_examples/msg/: example_pub_msg.yaml  example_pub_seq_of_nested_msg_msg.yaml  flat.yaml  nested.yaml
prototype_ws/src/examples/dynamic_typesupport_examples/src/: dynamic_sub_direct.cpp  dynamic_sub_serialized.cpp  static_pub.cpp  static_sub.cpp
prototype_ws/src/examples/dynamic_typesupport_examples/src/detail/: create_description.cpp  create_description.hpp
prototype_ws/src/examples/evolving_serialization_examples/: CMakeLists.txt  package.xml
prototype_ws/src/examples/evolving_serialization_examples/msg/: example_pub_msg.yaml  example_pub_seq_of_nested_msg_msg.yaml  flat.yaml
prototype_ws/src/examples/evolving_serialization_examples/src/fastrtps_evolving_pubsub/: CMakeLists.txt  EvolvingPublisher.cpp  EvolvingPublisher.h  EvolvingSubscription.cpp  EvolvingSubscription.h  README.md
prototype_ws/src/examples/evolving_serialization_examples/src/fastrtps_evolving_walkthrough/: CMakeLists.txt  walkthrough.cpp
prototype_ws/src/examples/evolving_serialization_examples/src/protobuf_evolving_ser/: CMakeLists.txt  TODO  protobuf_evolving_ser.cpp  protobuf_scratchpad.cpp  protogen_demo.cpp
prototype_ws/src/examples/evolving_serialization_examples/src/yaml_parsing/: CMakeLists.txt  flat_msg_yaml_parsing.c  nested_msg_yaml_parsing.c
prototype_ws/src/examples/runtime_type_support_examples/: CMakeLists.txt  package.xml
prototype_ws/src/examples/runtime_type_support_examples/msg/: example_pub_msg.yaml  example_pub_seq_of_nested_msg_msg.yaml
prototype_ws/src/examples/runtime_type_support_examples/src/: runtime_sub_direct.cpp  runtime_sub_serialized.cpp  static_pub.cpp  static_sub.cpp
prototype_ws/src/runtime_type_support_examples/: CMakeLists.txt  package.xml
prototype_ws/src/runtime_type_support_examples/msg/: example_pub_msg.yaml  example_pub_seq_of_nested_msg_msg.yaml
prototype_ws/src/runtime_type_support_examples/src/: main.cpp  user_land.cpp
prototype_ws/src/serialization_support_fastrtps_c/: CMakeLists.txt  CMakeLists.txt~HEAD  CMakeLists.txt~main  package.xml
prototype_ws/src/serialization_support_fastrtps_c/src/: identifier.cpp  (+3 more)
prototype_ws/src/serialization_support_lib/: README.md  glib-extras.cmake  package.xml  package.xml~main
(+41 files in other folders)
