<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>rosidl_dynamic_typesupport_fastrtps</name>
  <version>0.0.1</version>
  <description>FastDDS serialization support implementation for use with C/C++.</description>
  <maintainer email="brandon@openrobotics.org">Brandon Ong</maintainer>

  <license>Apache License 2.0</license>
  <author email="brandon@openrobotics.org">Brandon Ong</author>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <build_depend>rosidl_dynamic_typesupport</build_depend>
  <build_depend>fastcdr</build_depend>
  <build_depend>fastrtps</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
