<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>dynamic_typesupport_examples</name>
  <version>0.0.1</version>
  <description>Runtime Type Support examples.</description>
  <maintainer email="brandon@openrobotics.org">Brandon Ong</maintainer>

  <license>Apache License 2.0</license>
  <author email="brandon@openrobotics.org">Brandon Ong</author>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <build_depend>evolving_protobuf_c</build_depend>
  <build_depend>rosidl_dynamic_typesupport</build_depend>
  <build_depend>pkg-config</build_depend>
  <build_depend>protobuf</build_depend>
  <build_depend>rcl</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>dynamic_typesupport_examples_msgs</build_depend>
  <build_depend>yaml</build_depend>

  <exec_depend>protobuf</exec_depend>
  <exec_depend>rcl</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>dynamic_typesupport_examples_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
