<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>evolving_serialization_examples</name>
  <version>0.0.1</version>
  <description>Example usage of the evolving message types serialization library.</description>
  <maintainer email="brandon@openrobotics.org">Brandon Ong</maintainer>

  <license>Apache License 2.0</license>
  <author email="brandon@openrobotics.org">Brandon Ong</author>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <build_depend>serialization_support_fastrtps_c</build_depend>
  <build_depend>evolving_protobuf_c</build_depend>
  <build_depend>serialization_support_lib</build_depend>
  <build_depend>mosquitto-dev</build_depend>
  <build_depend>pkg-config</build_depend>
  <build_depend>protobuf</build_depend>
  <build_depend>rcl</build_depend>
  <build_depend>yaml</build_depend>

  <exec_depend>protobuf</exec_depend>
  <exec_depend>rcl</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
